# FrandzE-Commerce

./: .gitignore  README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/base/: admin.py  apps.py  models.py  products.py  serializers.py  signals.py  urls.py
backend/base/migrations/: 0001_initial.py  0002_order_shippingaddress_review_orderitems.py  0003_product_image.py  0004_rename_order_shippingaddress_order_and_more.py  0005_alter_order_user_alter_product_image_and_more.py  0006_review_created_at_alter_review_product.py
backend/base/urls/: order_urls.py  product_urls.py  user_urls.py
backend/base/views/: order_views.py  product_views.py  user_views.py
backend/frontend/: package-lock.json  package.json
backend/frontend/public/: index.html
backend/frontend/src/: App.js  index.css  index.js  store.js
backend/frontend/src/actions/: cartActions.js  orderActions.js  productActions.js  userActions.js
backend/frontend/src/components/: CheckoutSteps.js  Footer.js  FormContainer.js  Header.js  Product.js  Rating.js  SearchBox.js
backend/frontend/src/constants/: cartConstants.js  orderConstants.js  productConstants.js  userConstants.js
backend/frontend/src/reducers/: cartReducers.js  orderReducers.js  productReducers.js  userReducer.js
backend/frontend/src/screens/: AllOrdersScreen.js  CartScreen.js  HomeScreen.js  LoginScreen.js  OrderScreen.js  PaymentScreen.js  PlaceOrderScreen.js  ProductEditScreen.js  ProductScreen.js  ProductsListScreen.js  RegisterScreen.js  ShippingScreen.js  (+3 more)
backend/staticfiles/js/: main.e60d1c6a.js
